# ArchiAI

./: .env.example  .gitignore  COLLABORATION_HANDOFF.md  DEVELOPER_GUIDE.md  FRONTEND_SETUP_GUIDE.md  IMPLEMENTATION_ROADMAP.md  LICENSE  README.md  __init__.py  activate_this.py  asgi.py  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt  settings.py  temp_migrations.sqlite3  urls.py  wsgi.py
archi3d/: asgi.py  celery.py  settings.py  urls.py
backend/: pyproject.toml  requirements.txt
bylaws/: default.json  india_delhi.json  india_mumbai.json  usa_nyc.json
frontend/: DEVELOPER_GUIDE.md  index.html  package-lock.json  package.json
health/: __init__.py  apps.py  urls.py  views.py
outputs/: hypar_0600b406be.json  hypar_0bd249c8a8.json  hypar_174b75e9bb.json  hypar_196b2f36ef.json  hypar_2502ed217a.json  hypar_2c783963fb.json  hypar_2ff4722bfa.json  hypar_338b27f246.json  hypar_349b4b357b.json  hypar_34c25f33a4.json  hypar_44a14699ee.json  hypar_5dd1e92ee5.json  hypar_5de3c2d57e.json  hypar_78cf7c89ab.json  hypar_7d43d81056.json  hypar_8011ea9512.json  hypar_8fbbd05f92.json  hypar_9e30564381.json  hypar_a24053d7a8.json  hypar_a875952cdf.json  hypar_babea61dc2.json  hypar_bb3c448e65.json  hypar_bc7b216e67.json  hypar_bridge_187e5e51c1.csv  hypar_bridge_a3e31eb4d4.csv  hypar_bridge_e7e1eefa1a.csv  hypar_bridge_testdims.csv  hypar_c847cdde82.json  hypar_c88fa09b60.json  hypar_ca1dea26ea.json  hypar_d03528562d.json  hypar_d5233fdbd5.json  hypar_d7f5f08ab4.json  hypar_ddc230512f.json  hypar_e01cef6a9a.json  hypar_e0b4e07692.json  hypar_e154f6f79c.json  (+34 more)
(+194 files in other folders)
